Temporary scrollbar fix to AuthComponent

--- a/src/app/components/auth/auth.component.scss
+++ b/src/app/components/auth/auth.component.scss
@@ -15,6 +15,10 @@ main {
   }
 }
 
+section {
+  overflow-y: auto;
+}
+
 .welcome-cursive {
   display: inline;
   font-size: 1.2rem;
